--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
             <a href="https://github.com/manuav007/Docker-Experiments" style="display: inline-block; padding: 0.375rem 0.75rem; font-size: 0.75rem; font-weight: 500; text-align: center; text-decoration: none; border-radius: 6px; cursor: pointer; background-color: #238636; color: white; border: 1px solid rgba(240, 246, 252, 0.1);" target="_blank">
               <i class="fab fa-github"></i> Code
             </a>
+            <a href="https://app-nhcza4tyesstnx7ef6bmnh.streamlit.app/" style="display: inline-block; padding: 0.375rem 0.75rem; font-size: 0.75rem; font-weight: 500; text-align: center; text-decoration: none; border-radius: 6px; cursor: pointer; background-color: transparent; color: #58a6ff; border: 1px solid #30363d;" target="_blank">
+              <i class="fas fa-external-link-alt"></i> Live Demo
+            </a>
           </div>
         </div>
         
