--- a/index.html
+++ b/index.html
@@ -248,6 +248,22 @@
             </a>
           </div>
         </div>
+
+        <!-- Project 15 -->
+        <div style="background-color: #161b22; border: 1px solid #30363d; border-radius: 6px; padding: 1.5rem; transition: border-color 0.2s;">
+          <img src="https://github.com/manuav007/profile/blob/main/TRT-Blog-Banner--1--11.png?raw=true" alt="Streamlit App Project" style="width: 100%; height: 120px; background-color: #0d1117; border-radius: 6px; margin-bottom: 1rem; object-fit: cover; border: 1px solid #30363d;">
+          <h3 style="font-size: 1rem; font-weight: 600; margin-bottom: 0.5rem; color: #58a6ff;">Multipage-DataScience</h3>
+          <p style="font-size: 0.875rem; margin-bottom: 1rem; color: #8b949e; min-height: 3.5em;">Developing web apps with Streamlit to visualize and interact with data.</p>
+          <div style="display: flex; gap: 0.5rem; margin-top: 1rem;">
+            <a href="https://github.com/manuav007/Multipage-DataScience" style="display: inline-block; padding: 0.375rem 0.75rem; font-size: 0.75rem; font-weight: 500; text-align: center; text-decoration: none; border-radius: 6px; cursor: pointer; background-color: #238636; color: white; border: 1px solid rgba(240, 246, 252, 0.1);" target="_blank">
+              <i class="fab fa-github"></i> Code
+            </a>
+            <a href="https://multipage-datascience-bzrrmytfeh9xrshh6m8fge.streamlit.app/" style="display: inline-block; padding: 0.375rem 0.75rem; font-size: 0.75rem; font-weight: 500; text-align: center; text-decoration: none; border-radius: 6px; cursor: pointer; background-color: transparent; color: #58a6ff; border: 1px solid #30363d;" target="_blank">
+              <i class="fas fa-external-link-alt"></i> Live Demo
+            </a>
+          </div>
+        </div>
+
       </div>
     </main>
   </div>
